Updated the Admin Dashboard Component🏁
1. N/A
2. 10
3. N/A

--- a/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -5,8 +5,7 @@
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains"
-                    src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
                     <ion-card-title>User Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -22,8 +21,7 @@
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains"
-                    src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
                     <ion-card-title>Rooms Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -33,15 +31,13 @@
                     A section to manage the Users currently in the app, including demotion,
                     promotion and permissions.
                 </ion-card-content>
-                <ion-button fill="clear"
-                    [routerLink]="['/admin/room-database']">Access</ion-button>
+                <ion-button fill="clear" [routerLink]="['/admin/room-database']">Access</ion-button>
             </ion-card>
         </ion-item>
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains"
-                    src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
                     <ion-card-title>Bookings Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -51,15 +47,13 @@
                     A section to manage the Users currently in the app, including demotion,
                     promotion and permissions.
                 </ion-card-content>
-                <ion-button fill="clear"
-                    [routerLink]="['/admin/booking-database']">Access</ion-button>
+                <ion-button fill="clear" [routerLink]="['/admin/booking-database']">Access</ion-button>
             </ion-card>
         </ion-item>
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains"
-                    src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
                     <ion-card-title>Food Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -72,6 +66,125 @@
                 <ion-button fill="clear" [routerLink]="['/admin/food-database']">Access</ion-button>
             </ion-card>
         </ion-item>
+
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>Announcement Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the announcements in the app, including creation, deletion, and updates.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/announcement-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>Language Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the languages supported in the app, including adding new languages, updating
+                    existing ones, and removing languages.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/language-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>News Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the news articles in the app, including creating new articles, updating existing
+                    ones, and deleting articles.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/news-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>Order Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the food orders in the app, including viewing order details, updating order
+                    status, and cancelling orders.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/order-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>Promo-Code Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the promo-codes in the app, including creating new codes, updating existing
+                    codes, and deleting codes.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/promo--database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>Registration Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the registrations to activities in the app, including viewing registered users,
+                    adding new registrations, and canceling existing registrations.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/registration-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>Services Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the services offered by the app, including activities and facilities. This
+                    section allows you to add, edit, and remove services, as well as view service details and
+                    availability.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/services-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+        <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <ion-card-header>
+                    <ion-card-title>Stock Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the stock of items offered by the app, including products, supplies, and
+                    equipment. This section allows you to add, edit, and remove items, as well as view item details and
+                    availability.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/stock-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+
+
+
         <!-- <div class="row">
     <div class="col-md-3">
         <button [routerLink]="['/admin/announcement-database']" class="check-btn">{{"Announcement Database" | translate}}</button>
@@ -99,10 +212,7 @@
     <div class="col-md-3">
         <button [routerLink]="['/admin/stock-database']" class="check-btn">{{"Stock Database" | translate}}</button>
     </div>
-</div> -->
-
-
-        <!-- </table> -->
+</div>  -->
 
     </ion-list>
 </ion-content>
