Added functionality to promo codes🏁
1. N/A
2. 10
3. Added full functionality to promo codes

--- a/Client/Application/src/app/pages/guest/home/home.component.scss
+++ b/Client/Application/src/app/pages/guest/home/home.component.scss
@@ -36,7 +36,7 @@ $primary-color: var(--ion-color-primary);
 .title {
 
   @extend .title-parent;
-  color: var(--ion-color-light);
+  color: white;
   font-size: 34px;
   top: 45%;
   
