--- a/Client/Application/src/app/pages/guest/services/browse/browse-services.component.scss
+++ b/Client/Application/src/app/pages/guest/services/browse/browse-services.component.scss
@@ -16,7 +16,7 @@
     font-size: 34px;
     line-height: 39px;
     text-transform: uppercase;
-    color: var(--ion-color-light);
+    color: white;
     width: fit-content;
     position: absolute;
     left: 50%;
