--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
@@ -17,7 +17,7 @@
     font-size: 34px;
     line-height: 39px;
     text-transform: uppercase;
-    color: var(--ion-color-light);
+    color: white;
     width: fit-content;
     position: absolute;
     left: 50%;
