--- a/Client/Application/src/app/pages/settings/settings.component.html
+++ b/Client/Application/src/app/pages/settings/settings.component.html
@@ -6,14 +6,15 @@
       <ion-icon name="color-palette" slot="start"
         style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text style="font-weight: 700; font-size: 18px; color: var(--ion-color-dark);">Themes</ion-text>
+        <ion-text
+          style="font-weight: 700; font-size: 18px; color: var(--ion-color-dark);">Themes</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Change the color and style of the
           app to your liking with different themes.</p>
 
         <ion-item style="--background: transparent; --color: var(--ion-color-dark)">
           <ion-label>Theme</ion-label>
-          <ion-select [value]="theme" style="color: var(--ion-color-dark);" id="themeSelect" placeholder="Select a theme"
-            (ionChange)="changeTheme($event)">
+          <ion-select [value]="theme" style="color: var(--ion-color-dark);" id="themeSelect"
+            placeholder="Select a theme" (ionChange)="changeTheme($event)">
             <ion-select-option style="--background: red;" value="light">Light</ion-select-option>
             <ion-select-option value="dark">Dark</ion-select-option>
             <ion-select-option value="system">System</ion-select-option>
@@ -24,9 +25,11 @@
     </ion-item>
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
     <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto';">
-      <ion-icon name="language" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
+      <ion-icon name="language" slot="start"
+        style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Languages</ion-text>
+        <ion-text
+          style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Languages</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Select your preferred language
           for the app's user interface and content.</p>
       </div>
@@ -36,26 +39,38 @@
       <ion-icon name="notifications" slot="start"
         style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Notifications</ion-text>
+        <ion-text
+          style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Notifications</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Manage your notification
           settings, including which types of notifications you receive.</p>
       </div>
     </ion-item>
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
     <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto';">
-      <ion-icon name="pricetag" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
+      <ion-icon name="pricetag" slot="start"
+        style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Promo Code</ion-text>
+        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Promo
+          Code</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Enter a promotional code to
           receive discounts or other special offers.</p>
+        <div style="display: flex;">
+          <ion-input label="Promo Code" style="display: inline;"
+            [(ngModel)]="promo"></ion-input>
+          <ion-button [disabled]="!promo" color="secondary" (click)="applyPromo()">{{'Apply' |
+            translate }}</ion-button>
+        </div>
       </div>
     </ion-item>
+
+
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
     <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto';">
       <ion-icon name="document-text" slot="start"
         style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Terms of Service</ion-text>
+        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Terms of
+          Service</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">View and agree to the app's terms
           of service and privacy policy.</p>
       </div>
@@ -66,7 +81,8 @@
         style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div
         style="display: flex; flex-direction: column; justify-content: center; margin-left: 10px;">
-        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">About</ion-text>
+        <ion-text
+          style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">About</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Learn more about the app,
           including version number and developer information.</p>
       </div>
