Fixed Bugs in Admin Panel🏁
1. N/A
2. 10
3. N/A

--- a/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -135,7 +135,7 @@
                     A section to manage the promo-codes in the app, including creating new codes, updating existing
                     codes, and deleting codes.
                 </ion-card-content>
-                <ion-button fill="clear" [routerLink]="['/admin/promo--database']">Access</ion-button>
+                <ion-button fill="clear" [routerLink]="['/admin/promo-database']">Access</ion-button>
             </ion-card>
         </ion-item>
 
@@ -164,12 +164,12 @@
                     section allows you to add, edit, and remove services, as well as view service details and
                     availability.
                 </ion-card-content>
-                <ion-button fill="clear" [routerLink]="['/admin/services-database']">Access</ion-button>
+                <ion-button fill="clear" [routerLink]="['/admin/service-database']">Access</ion-button>
             </ion-card>
         </ion-item>
 
         <ion-item>
-            <ion-card>
+            <ion-card style="margin-bottom: 8vh;">
                 <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
                     <ion-card-title>Stock Database</ion-card-title>
