--- a/Client/Application/src/app/components/room/room-item/room-item.component.scss
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.scss
@@ -1,4 +1,3 @@
-
 $primary-color: var(--ion-color-primary);
 
 .parent {
@@ -36,10 +35,29 @@ img {
     transform: translateY(-17%);
 }
 
+.explore {
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: uppercase;
+    --color: white;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    left: 50%;
+    bottom: 0px;
+    transform: translateX(-50%);
+
+}
+
 .image-bg {
     background-color: $primary-color;
     block-size: fit-content;
     height: fit-content;
+    position: relative;
     margin-top: 12%;
 }
 
@@ -49,20 +67,20 @@ hr {
     margin-bottom: 4%;
 }
 
-.main-img{
+.main-img {
     width: 200%;
 }
 
-.img-title{
+.img-title {
     text-align: center;
     font-family: 'Roboto';
 }
 
-.sub-imgs{
+.sub-imgs {
     padding: 10px;
 }
 
-.learn-more-button{
+.learn-more-button {
     border-radius: 40px;
     padding: 10px;
     width: 175px;
@@ -88,4 +106,9 @@ hr {
     font-size: 15px;
     margin-bottom: 2%;
     text-transform: uppercase;
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
 }
