--- a/Client/Application/src/app/pages/authentication/verify/verify.component.html
+++ b/Client/Application/src/app/pages/authentication/verify/verify.component.html
@@ -1,26 +1,18 @@
-<ion-content style="--background: var(--ion-color-light)">
+<div style="height: 100%; background: var(--ion-color-light)">
     <ion-img style="position: fixed;" src="../../../../assets/register/header-1.png"></ion-img>
     <div class="labels">
 
 
-        <ion-text class="title">Verify Email</ion-text>
-        <ion-list style="background-color: transparent">
+        <ion-text class="title">{{'Verify Email' | translate}}</ion-text>
 
-            <ion-item style="--background: transparent">
+        <ion-input class="inputs" label="Email" labelPlacement="floating" [(ngModel)]="email"
+            class="input"></ion-input>
+        <ion-input class="inputs" label="Verification" labelPlacement="floating"
+            [(ngModel)]="verification" class="input">
+        </ion-input>
 
-                <ion-input label="Email" labelPlacement="floating" [(ngModel)]="email"
-                    placeholder="Email" class="input"></ion-input>
-            </ion-item>
-            <ion-item style="--background: transparent">
-
-                <ion-input label="Verification" labelPlacement="floating" [(ngModel)]="verification"
-                    class="input">
-                </ion-input>
-            </ion-item>
-        </ion-list>
-        <ion-button class="register" (click)="verify()">Sign
-            up</ion-button>
-        <ion-button (click)="send()" class="register">Send</ion-button>
-        <ion-text class="login" (click)="logout()">Logout</ion-text>
+        <ion-button (click)="send()" class="register">{{'Send' | translate}}</ion-button>
+        <ion-button class="register" (click)="verify()">{{'Verify' | translate}}</ion-button>
+        <ion-text class="login" (click)="logout()">{{'Logout' | translate}}</ion-text>
     </div>
-</ion-content>
+</div>
