--- a/Client/Application/src/app/pages/authentication/verify/verify.component.scss
+++ b/Client/Application/src/app/pages/authentication/verify/verify.component.scss
@@ -66,8 +66,8 @@
 
     position: relative;
     padding-top: 5%;
-    top: 30%;
-    height: 70%;
+    top: 25%;
+    height: 75%;
     display: flex;
     flex-direction: column;
     border-top-right-radius: 50px;
@@ -79,16 +79,30 @@
 }
 
 
+.input {
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    --padding-start: 16px;
+    border-radius: 8px;
+    width: 80%;
+    background-color: rgba(217, 217, 217, 0.4);
+    margin-bottom: 16px;
+
+}
 
 .title {
 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 48px;
     line-height: 48px;
-    width: 50%;
-    margin-bottom: 16px;
+    width: 75%;
+    margin-bottom: 32px;
 
     color: var(--ion-color-dark);
 }
