Completed the Integration of Images in Components🏁
1. N/A
2. 10
3. N/A

--- a/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -5,7 +5,7 @@
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="users_db" />
                 <ion-card-header>
                     <ion-card-title>User Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -21,7 +21,7 @@
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="rooms_db" />
                 <ion-card-header>
                     <ion-card-title>Rooms Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -37,7 +37,7 @@
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="booking_db" />
                 <ion-card-header>
                     <ion-card-title>Bookings Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -53,7 +53,7 @@
         <ion-item>
 
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="food_db" />
                 <ion-card-header>
                     <ion-card-title>Food Database</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
@@ -70,7 +70,7 @@
 
         <ion-item>
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="announcement_db" />
                 <ion-card-header>
                     <ion-card-title>Announcement Database</ion-card-title>
                 </ion-card-header>
@@ -83,7 +83,7 @@
 
         <ion-item>
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="language_db" />
                 <ion-card-header>
                     <ion-card-title>Language Database</ion-card-title>
                 </ion-card-header>
@@ -98,7 +98,7 @@
 
         <ion-item>
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="news_db" />
                 <ion-card-header>
                     <ion-card-title>News Database</ion-card-title>
                 </ion-card-header>
@@ -113,7 +113,7 @@
 
         <ion-item>
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="order_db" />
                 <ion-card-header>
                     <ion-card-title>Order Database</ion-card-title>
                 </ion-card-header>
@@ -127,7 +127,7 @@
 
         <ion-item>
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="promo_db" />
                 <ion-card-header>
                     <ion-card-title>Promo-Code Database</ion-card-title>
                 </ion-card-header>
@@ -141,7 +141,7 @@
 
         <ion-item>
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="registration_db"/>
                 <ion-card-header>
                     <ion-card-title>Registration Database</ion-card-title>
                 </ion-card-header>
@@ -155,7 +155,7 @@
 
         <ion-item>
             <ion-card>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="service_db" />
                 <ion-card-header>
                     <ion-card-title>Services Database</ion-card-title>
                 </ion-card-header>
@@ -170,7 +170,7 @@
 
         <ion-item>
             <ion-card style="margin-bottom: 8vh;">
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+                <img alt="Silhouette of mountains" [src]="stock_db" />
                 <ion-card-header>
                     <ion-card-title>Stock Database</ion-card-title>
                 </ion-card-header>
