--- a/Client/Application/src/app/pages/authentication/register/register.component.html
+++ b/Client/Application/src/app/pages/authentication/register/register.component.html
@@ -1,5 +1,5 @@
 <ion-content style="--background: var(--ion-color-light)">
-    <ion-img style="position: fixed;" src="../../../../assets/register/header-1.png"></ion-img>
+    <ion-img style="position: fixed;" [src]="register_bg"></ion-img>
     <div class="labels">
 
         <ng-container *ngIf="!final_page">
