--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -1,4 +1,4 @@
-<ion-img style="position: fixed;" src="../../../../assets/profile-pics/profile-bg.png"></ion-img>
+<ion-img style="position: fixed;" [src]="profile_bg"></ion-img>
 
 <div class="container">
 
