Implemented Change Language🌐
1. Add language selector and Link
2. 10
3. Implemented the code for the change language functionality in the app.

--- a/Client/Application/src/app/pages/settings/settings.component.html
+++ b/Client/Application/src/app/pages/settings/settings.component.html
@@ -1,16 +1,12 @@
 <ion-content style="--background: var(--ion-color-light)">
   <br><br>
   <ion-list lines="none" style="margin-top: 5vh; background-color: var(--ion-color-light)">
-    <ion-item
-      style="display: flex; flex-direction: column;font-family: 'Roboto'; --background: transparent">
-      <ion-icon name="color-palette" slot="start"
-        style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
+    <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto'; --background: transparent">
+      <ion-icon name="color-palette" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text
-          style="font-weight: 700; font-size: 18px; color: var(--ion-color-dark);">Themes</ion-text>
+        <ion-text style="font-weight: 700; font-size: 18px; color: var(--ion-color-dark);">Themes</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Change the color and style of the
           app to your liking with different themes.</p>
-
         <ion-item style="--background: transparent; --color: var(--ion-color-dark)">
           <ion-label>Theme</ion-label>
           <ion-select [value]="theme" style="color: var(--ion-color-dark);" id="themeSelect"
@@ -20,43 +16,47 @@
             <ion-select-option value="system">System</ion-select-option>
           </ion-select>
         </ion-item>
-
       </div>
     </ion-item>
+
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
     <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto';">
-      <ion-icon name="language" slot="start"
-        style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
+      <ion-icon name="language" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text
-          style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Languages</ion-text>
+        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Languages</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Select your preferred language
           for the app's user interface and content.</p>
+        <ion-item style="--background: transparent; --color: var(--ion-color-dark)">
+          <ion-label>Language</ion-label>
+          <ion-select (ngModelChange)="updateLanguage($event)" [ngModel]="chosen_language">
+            <ion-select-option class="title-2" *ngFor="let list of languages | keyvalue" [value]="list.key">
+              {{list.value.code_name}}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
       </div>
     </ion-item>
+
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
     <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto';">
-      <ion-icon name="notifications" slot="start"
-        style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
+      <ion-icon name="notifications" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text
-          style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Notifications</ion-text>
+        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Notifications</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Manage your notification
           settings, including which types of notifications you receive.</p>
       </div>
     </ion-item>
+
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
     <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto';">
-      <ion-icon name="pricetag" slot="start"
-        style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
+      <ion-icon name="pricetag" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
         <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Promo
           Code</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Enter a promotional code to
           receive discounts or other special offers.</p>
         <div style="display: flex;">
-          <ion-input label="Promo Code" style="display: inline;"
-            [(ngModel)]="promo"></ion-input>
+          <ion-input label="Promo Code" style="display: inline;" [(ngModel)]="promo"></ion-input>
           <ion-button [disabled]="!promo" color="secondary" (click)="applyPromo()">{{'Apply' |
             translate }}</ion-button>
         </div>
@@ -66,8 +66,7 @@
 
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
     <ion-item style="display: flex; flex-direction: column;font-family: 'Roboto';">
-      <ion-icon name="document-text" slot="start"
-        style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
+      <ion-icon name="document-text" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
         <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Terms of
           Service</ion-text>
@@ -79,10 +78,8 @@
     <ion-item style="display: flex; flex-direction: row;font-family: 'Roboto';">
       <ion-icon name="information-circle" slot="start"
         style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
-      <div
-        style="display: flex; flex-direction: column; justify-content: center; margin-left: 10px;">
-        <ion-text
-          style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">About</ion-text>
+      <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 10px;">
+        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">About</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Learn more about the app,
           including version number and developer information.</p>
       </div>
