Fixed and Tested the Logic Of Images🏁
1. N/A
2. 10
3. N/A

--- a/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -184,7 +184,7 @@
         </ion-item>
         <ion-item>
             <ion-card style="margin-bottom: 8vh;">
-                <img alt="Silhouette of mountains" [src]="stock_db" />
+                <img alt="Silhouette of mountains" [src]="informations_db" />
                 <ion-card-header>
                     <ion-card-title>Informations Database</ion-card-title>
                 </ion-card-header>
