--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -1,4 +1,4 @@
-<ion-img style="position: fixed;" [src]="profile_bg"></ion-img>
+<ion-img style="position: fixed;" [style.backgroundImage]="'url(' + profile_bg + ')'"></ion-img>
 
 <div class="container">
 
