--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -1,6 +1,6 @@
 <ion-content style="margin-bottom: 100px; --background: var(--ion-color-light)">
 
-<div class="main" [style.backgroundImage]="restaurant">
+<div class="main" [style.backgroundImage]="'url(' + restaurant + ')'">
     <p class="title">
         This is it.
     </p>
