--- a/Client/Application/src/app/pages/guest/services/browse/browse-services.component.html
+++ b/Client/Application/src/app/pages/guest/services/browse/browse-services.component.html
@@ -1,6 +1,6 @@
 <ion-content style="--background: var(--ion-color-light)">
 
-    <div class="header" [style.backgroundImage]="services_bg">
+    <div class="header" [style.backgroundImage]="'url(' + services_bg + ')'">
         <ion-text class="title">
             This is it.
         </ion-text>
