--- a/Client/Application/src/app/pages/guest/home/home.component.html
+++ b/Client/Application/src/app/pages/guest/home/home.component.html
@@ -1,5 +1,5 @@
 <ion-content style="--background: var(--ion-color-light)">
-  <div class="header" [style.backgroundImage]="home_bg">
+  <div class="header" [style.backgroundImage]="'url(' + home_bg + ')'">
     <ion-text class="title">
       {{'This is it.' | translate}}
     </ion-text>
