--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
@@ -1,6 +1,6 @@
 <ion-content style="--background: var(--ion-color-light)">
 
-  <div class="main" [style.backgroundImage]="room_bg">
+  <div class="main" [style.backgroundImage]="'url(' + room_bg + ')'">
     <p class="title">
       This is it.
     </p>
