--- a/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -183,6 +183,20 @@
             </ion-card>
         </ion-item>
         <ion-item>
+            <ion-card>
+                <img alt="Silhouette of mountains" [src]="images_db" />
+                <ion-card-header>
+                    <ion-card-title>Images Database</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    A section to manage the informations offered by the app, including titles, descriptions, and
+                    pictrues. This section allows you to add, edit, and remove information, as well as view information details and
+                    availability.
+                </ion-card-content>
+                <ion-button fill="clear" [routerLink]="['/admin/images-database']">Access</ion-button>
+            </ion-card>
+        </ion-item>
+        <ion-item>
             <ion-card style="margin-bottom: 8vh;">
                 <img alt="Silhouette of mountains" [src]="informations_db" />
                 <ion-card-header>
