--- a/Client/Website/src/app/pages/admin/image-database/image-database.component.html
+++ b/Client/Website/src/app/pages/admin/image-database/image-database.component.html
@@ -1,10 +1,29 @@
 <app-nav-bar></app-nav-bar>
-<ng-container *ngFor="let image of images; let i = index">
 
-    <h2>{{ image.filename | translate }}</h2>
-    <ngp-image-picker [_imageSrc]="image.base64 ? 'data:image/png;base64,' + image.base64 : ''"
-        [_config]="imagePickerConf"
-        ($imageChanged)="onImageChange($event, image, i)"></ngp-image-picker>
+<table style="width: 100%; table-layout: fixed;">
+    <tr style="vertical-align: top;">
+        <td>
 
-</ng-container>
+            <h2>{{'Website Images' | translate}}</h2>
+            <ng-container *ngFor="let image of images[0]; let i = index">
+                
+                <h2>{{ image.filename | translate }}</h2>
+                <ngp-image-picker [_imageSrc]="image.base64 ? 'data:image/png;base64,' + image.base64 : ''"
+                [_config]="imagePickerConf" ($imageChanged)="onImageChange($event, image, i, 'website')"></ngp-image-picker>
+                
+            </ng-container>
+        </td>
+        <td>
+            
+            <h2>{{'Application Images' | translate}}</h2>
+            <ng-container *ngFor="let image of images[1]; let i = index">
+
+                <h2>{{ image.filename | translate }}</h2>
+                <ngp-image-picker [_imageSrc]="image.base64 ? 'data:image/png;base64,' + image.base64 : ''"
+                    [_config]="imagePickerConf" ($imageChanged)="onImageChange($event, image, i, 'application')"></ngp-image-picker>
+
+            </ng-container>
+        </td>
+    </tr>
+</table>
 <app-footer [main_color]="'#14274A'" [font_color]="'white'"></app-footer>
