--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
@@ -27,4 +27,8 @@
     </ng-template>
   </ion-modal>
 
+  <ion-infinite-scroll #scroll (ionInfinite)="ngOnInit()">
+    <ion-infinite-scroll-content loadingText="Please wait..." loadingSpinner="bubbles"></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
