Prepared the layout🏁
1. N/A
2. 10
3. Prepared the layout of the availability screen

--- a/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.html
@@ -1,6 +1,6 @@
-<ion-fab-button (click)="closeModal.emit(undefined)" class="back-btn">
-  <ion-icon name="arrow-back-outline"></ion-icon>
-</ion-fab-button>
 <div class="container">
- 
+  <ion-fab-button (click)="closeModal.emit(undefined)" class="back-btn">
+    <ion-icon name="close-outline"></ion-icon>
+  </ion-fab-button>
+
 </div>
