--- a/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.scss
@@ -2,15 +2,16 @@
 
 
 
-    width: 90%;
+    width: 100%;
     height: 80%;
     padding: 24px;
-    border-radius: 40px;
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
     background-color: var(--ion-color-light);
     position: fixed;
-    top: 50%;
+    bottom: 0px;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%);
 
     // text-align: center;
 
@@ -83,9 +84,13 @@
 
 .back-btn {
 
-    margin: 16px;
-    --background: transparent;
-    --color: var(--ion-color-dark);
+    // margin: 16px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    top: 0%;
+    --background: var(--ion-color-primary);
+    --color: var(--ion-color-light);
     --box-shadow: none;
     --background-activated-opacity: 0;
     --background-focused-opacity: 0;
